--- a/analysis/expressionGenesets.Rmd
+++ b/analysis/expressionGenesets.Rmd
@@ -182,7 +182,7 @@ for(i in 1:ncol(cont)){
     tmp <- goana(top$entrezid, universe = v$genes$entrezid, 
                  covariate = v$genes$length)
     tmp <- topGO(tmp, number = Inf)
-    tmp$FDR <- p.adjust(tmp$P.DE)
+    tmp$FDR <- p.adjust(tmp$P.DE, method = "BH")
     tmp <- rownames_to_column(tmp, var = "ID")
     tmp$contrast <- colnames(cont)[i] 
     go <- bind_rows(go, tmp)
@@ -190,7 +190,7 @@ for(i in 1:ncol(cont)){
     tmp <- kegga(top$entrezid, universe = v$genes$entrezid, species = "Hs", 
                  covariate = v$genes$length, species.KEGG = "hsa")
     tmp <- topKEGG(tmp, number = Inf)
-    tmp$FDR <- p.adjust(tmp$P.DE)
+    tmp$FDR <- p.adjust(tmp$P.DE, method = "BH")
     tmp <- rownames_to_column(tmp, var = "PID")
     tmp$contrast <- colnames(cont)[i] 
     kegg <- bind_rows(kegg, tmp)
